force-app/main/default/objects/Lead/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>