force-app/main/default/objects/Lead/fields/Age_p__c.field-meta.xml
<CustomField>
    <fullName>Age_p__c</fullName>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>