force-app/main/default/objects/Lead/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Connected</fullName>
            </value>
            <value>
                <fullName>Call Completed</fullName>
            </value>
            <value>
                <fullName>No response from customer/Unavailable</fullName>
            </value>
            <value>
                <fullName>Re-schedule requested</fullName>
            </value>
            <value>
                <fullName>Chat completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>