force-app/main/default/objects/Lead/fields/Customer_Journey_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey_URL__c</fullName>
    <label>Customer Journey URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>