force-app/main/default/objects/Lead/fields/Customer_unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_unique_ID__c</fullName>
    <label>Customer unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>