force-app/main/default/objects/Lead/fields/Existing_Policy_Purchased_on_TATA_NeuAPP__c.field-meta.xml
<CustomField>
    <fullName>Existing_Policy_Purchased_on_TATA_NeuAPP__c</fullName>
    <label>Existing Policy Purchased on TATA NeuAPP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>