force-app/main/default/objects/Lead/fields/Father_Age__c.field-meta.xml
<CustomField>
    <fullName>Father_Age__c</fullName>
    <label>Father Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>