force-app/main/default/objects/Lead/fields/Father_Income__c.field-meta.xml
<CustomField>
    <fullName>Father_Income__c</fullName>
    <label>Father Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>