force-app/main/default/objects/Lead/fields/Father_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Father_Occupation__c</fullName>
    <label>Father Occupation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>