force-app/main/default/objects/Lead/fields/Father_PED__c.field-meta.xml
<CustomField>
    <fullName>Father_PED__c</fullName>
    <label>Father PED</label>
    <length>50</length>
    <type>Text</type>
</CustomField>