force-app/main/default/objects/Lead/fields/Follow_Ups_Done__c.field-meta.xml
<CustomField>
    <fullName>Follow_Ups_Done__c</fullName>
    <label>Follow-Ups Done</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>