force-app/main/default/objects/Lead/fields/If_Loans_Yes_then_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>If_Loans_Yes_then_Loan_Amount__c</fullName>
    <label>If Loans- Yes then Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>