force-app/main/default/objects/Lead/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <label>Insurer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>