force-app/main/default/objects/Lead/fields/Kid_Age__c.field-meta.xml
<CustomField>
    <fullName>Kid_Age__c</fullName>
    <label>Kid Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>