force-app/main/default/objects/Lead/fields/Kid_Name1__c.field-meta.xml
<CustomField>
    <fullName>Kid_Name1__c</fullName>
    <label>Kid Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>