force-app/main/default/objects/Lead/fields/Kid_PED__c.field-meta.xml
<CustomField>
    <fullName>Kid_PED__c</fullName>
    <label>Kid PED</label>
    <length>50</length>
    <type>Text</type>
</CustomField>