force-app/main/default/objects/Lead/fields/Lead_Creation_Page__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Page__c</fullName>
    <label>Lead Creation Page</label>
    <type>TextArea</type>
</CustomField>