force-app/main/default/objects/Lead/fields/Lead_Rank__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rank__c</fullName>
    <label>Lead Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
                <default>true</default>
                <label>Hot</label>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>