force-app/main/default/objects/Lead/fields/Lead_Rank_by_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rank_by_Advisor__c</fullName>
    <label>Lead Rank by Advisor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>