force-app/main/default/objects/Lead/fields/Lead_Stages__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stages__c</fullName>
    <label>Lead Stages</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Scheduled/WhatsApp initiated</fullName>
            </value>
            <value>
                <fullName>Connected with Advisor</fullName>
            </value>
            <value>
                <fullName>Form Filling initiated by the customer</fullName>
            </value>
            <value>
                <fullName>Form submitted by the customer</fullName>
            </value>
            <value>
                <fullName>Form Filling initiated</fullName>
            </value>
            <value>
                <fullName>Form submitted by the advisor</fullName>
            </value>
            <value>
                <fullName>Form review accepted</fullName>
            </value>
            <value>
                <fullName>Form rejected</fullName>
            </value>
            <value>
                <fullName>Payment Initiated</fullName>
            </value>
            <value>
                <fullName>Payment Completed</fullName>
            </value>
            <value>
                <fullName>KYC Completed</fullName>
            </value>
            <value>
                <fullName>KYC Rejected</fullName>
            </value>
            <value>
                <fullName>Policy Cancelled</fullName>
            </value>
            <value>
                <fullName>Policy Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>