force-app/main/default/objects/Lead/fields/Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expense__c</fullName>
    <label>Monthly Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>