force-app/main/default/objects/Lead/fields/Mother_Age__c.field-meta.xml
<CustomField>
    <fullName>Mother_Age__c</fullName>
    <label>Mother Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>