force-app/main/default/objects/Lead/fields/Mother_Income__c.field-meta.xml
<CustomField>
    <fullName>Mother_Income__c</fullName>
    <label>Mother Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>