force-app/main/default/objects/Lead/fields/Mother_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Mother_Occupation__c</fullName>
    <label>Mother Occupation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>