force-app/main/default/objects/Lead/fields/Mother_PED__c.field-meta.xml
<CustomField>
    <fullName>Mother_PED__c</fullName>
    <label>Mother PED</label>
    <length>50</length>
    <type>Text</type>
</CustomField>