force-app/main/default/objects/Lead/fields/No_of_transactions_Done_on_TATA_Neu_app__c.field-meta.xml
<CustomField>
    <fullName>No_of_transactions_Done_on_TATA_Neu_app__c</fullName>
    <label>No. of transactions Done on TATA Neu app</label>
    <length>50</length>
    <type>Text</type>
</CustomField>