force-app/main/default/objects/Lead/fields/Occupation_P__c.field-meta.xml
<CustomField>
    <fullName>Occupation_P__c</fullName>
    <label>Occupation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>