force-app/main/default/objects/Lead/fields/Parent_dependent__c.field-meta.xml
<CustomField>
    <fullName>Parent_dependent__c</fullName>
    <label>Parent Dependent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>