force-app/main/default/objects/Lead/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>