force-app/main/default/objects/Lead/fields/PED__c.field-meta.xml
<CustomField>
    <fullName>PED__c</fullName>
    <label>PED</label>
    <length>50</length>
    <type>Text</type>
</CustomField>