force-app/main/default/objects/Lead/fields/Plans_Selected__c.field-meta.xml
<CustomField>
    <fullName>Plans_Selected__c</fullName>
    <label>Plans Selected</label>
    <length>50</length>
    <type>Text</type>
</CustomField>