force-app/main/default/objects/Lead/fields/Premium_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Premium_Payment_Term__c</fullName>
    <label>Premium Payment Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>