force-app/main/default/objects/Lead/fields/Premium_Payment_Term_opted__c.field-meta.xml
<CustomField>
    <fullName>Premium_Payment_Term_opted__c</fullName>
    <label>Premium Payment Term opted</label>
    <length>50</length>
    <type>Text</type>
</CustomField>