force-app/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Heath Insurance</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>