force-app/main/default/objects/Lead/fields/Product_Plan__c.field-meta.xml
<CustomField>
    <fullName>Product_Plan__c</fullName>
    <label>Product Plan</label>
    <type>TextArea</type>
</CustomField>