force-app/main/default/objects/Lead/fields/Product_Selected__c.field-meta.xml
<CustomField>
    <fullName>Product_Selected__c</fullName>
    <label>Product Selected</label>
    <length>50</length>
    <type>Text</type>
</CustomField>