force-app/main/default/objects/Lead/fields/Riders__c.field-meta.xml
<CustomField>
    <fullName>Riders__c</fullName>
    <label>Riders</label>
    <length>50</length>
    <type>Text</type>
</CustomField>