force-app/main/default/objects/Lead/fields/Riders_Opted__c.field-meta.xml
<CustomField>
    <fullName>Riders_Opted__c</fullName>
    <label>Riders Opted</label>
    <length>50</length>
    <type>Text</type>
</CustomField>