force-app/main/default/objects/Lead/fields/Riders_SI__c.field-meta.xml
<CustomField>
    <fullName>Riders_SI__c</fullName>
    <label>Riders SI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>