force-app/main/default/objects/Lead/fields/Spouse_Age__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Age__c</fullName>
    <label>Spouse Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>