force-app/main/default/objects/Lead/fields/Spouse_City__c.field-meta.xml
<CustomField>
    <fullName>Spouse_City__c</fullName>
    <label>Spouse City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>