force-app/main/default/objects/Lead/fields/Spouse_Income__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Income__c</fullName>
    <label>Spouse Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>