force-app/main/default/objects/Lead/fields/Spouse_PED__c.field-meta.xml
<CustomField>
    <fullName>Spouse_PED__c</fullName>
    <label>Spouse PED</label>
    <length>50</length>
    <type>Text</type>
</CustomField>