force-app/main/default/objects/Lead/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>