force-app/main/default/objects/Lead/fields/Total_Age_on_TATA_Neu_App__c.field-meta.xml
<CustomField>
    <fullName>Total_Age_on_TATA_Neu_App__c</fullName>
    <label>Total Age on TATA Neu App</label>
    <length>50</length>
    <type>Text</type>
</CustomField>