force-app/main/default/objects/Lead/listViews/Health_Insurance_Member_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Health_Insurance_Member_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Health Insurance Queue Member</label>
    <queue>Health_Insurance_Queue_Member</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>